# Linux-basics-2020

./: Dockerfile  README.md  bash.sh  first.txt  index.html  links.sh  links.txt  pinanie.txt  report.md  report.txt  script.sh  site.txt  task01.txt  task02.txt  task03.txt  task04.sh  task1.md  task1.txt  task2.md  task2.txt  task3.md  task3.txt  task4.sh  urls.sh  utilties.txt  website.txt  wget.sh
.github/workflows/: main.yml
.github/workfows/: main.yml
data/: 0  1  2  3  5  6  7
reposts/: hw2_Kozyrev_Andrei.md
seminar01/: Баратов_Вагиф
seminar01/reports/: KORKIN.txt
seminar02/: README.md
seminar02/examples/: sum.sh
seminar02/task01/: .task01.sh.swp  task01.sh  task01.sh.save
seminar02/task02/: task02.sh
seminar03/: checker.py
seminar04/: checker.py
seminar04/task02/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  fast  inastall cmake  just_test.sh  main  run_sample_tests.sh  run_tests.sh  test.sh
seminar04/task02/Testing/Temporary/: CTestCostData.txt
seminar04/task02/test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_fast  test_fast.cpp
seminar04/task02/test/Testing/Temporary/: CTestCostData.txt
seminar05/: task1.txt  task2.sh  task3.sh
seminar07/: Dockerfile  task1.txt  task2.txt
src/: server.py
task01/: codeforces.html  codeforces.txt  otchet.md  report  report.md  task.md  task01.md
task02/: URLS.md  link.md  task.md  task02.md
task03/: Dockerfile  README.md  action.yml  entrypoint.sh
task04/: getlinks.sh  script.sh  solver.sh  task.sh  task4.sh
(+56 files in other folders)
